# Library-Management-System

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
apps/academic/: admin.py  models.py
apps/academic/migrations/: 0001_initial.py
apps/books/: admin.py  models.py  tasks.py
apps/books/api/v1/: repository.py
apps/books/helpers/: book_recommendations.py  error_messages.py  payment.py
apps/books/management/commands/: export_csv_to_db.py
apps/books/migrations/: 0001_initial.py  0002_borrow.py  0003_remove_book_borrower_book_quantity.py  0004_alter_book_availability_status_alter_book_isbn_and_more.py  0005_borrow_borrow_status.py  0006_book_publication_year_alter_book_availability_status_and_more.py  0007_reserve_reason.py  0008_reservequeue.py  0009_alter_reservequeue_options_alter_reservequeue_book.py  0010_notification.py  0011_rating.py  0012_alter_book_isbn.py  0013_remove_book_genre_remove_book_publication_year_and_more.py  0014_alter_book_author_alter_book_title.py  0015_delete_tag.py  0016_book_section_book_shelf_alter_genre_name.py  0017_alter_book_options.py  0018_alter_notification_options.py  0019_borrow_overdue_finepayment.py  0020_alter_borrow_options.py
apps/digital_resources/: admin.py  apps.py  models.py
apps/digital_resources/api/v1/: repository.py
apps/digital_resources/migrations/: 0001_initial.py
apps/membership/: admin.py  models.py
apps/membership/migrations/: 0001_initial.py  0002_payment.py
apps/users/: admin.py  managers.py  models.py  permissions.py  signals.py  tasks.py
apps/users/api/v1/: auth.py  helpers.py  repository.py
apps/users/migrations/: 0001_initial.py  0002_userprofile.py  0003_alter_userprofile_gender.py  0004_alter_userprofile_options_and_more.py  0005_alter_userprofile_address_and_more.py  0006_alter_userprofile_phone_number.py  0007_otp.py  0008_alter_userprofile_phone_number.py  0009_alter_otp_options.py  0010_alter_customuser_options_and_more.py
core/: manage.py
core/LibraryMgmtSys/: asgi.py  base.py  celery.py  development.py  production.py  routers.py  urls.py  wsgi.py
utils/: constants.py  helpers.py  models.py  permissions.py  threads.py
(+31 files in other folders)
