[tool.poetry]
name = "learningdjango"
version = "0.1.0"
description = ""
authors = ["SaugatMgr <saugatmagar433@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
django-jazzmin = "^2.6.0"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.2.0"
pyotp = "^2.9.0"
celery = {extras = ["redis"], version = "^5.3.6"}
django-celery-beat = "^2.6.0"
psycopg2-binary = "^2.9.9"
django = "^5.0.3"
boto3 = "^1.34.76"
django-storages = "^1.14.2"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
